--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -1,5 +1,5 @@
 <div class="card card-body p-5 mt-4">
-  <h1 class="display-4">Notes App Nodejs And Mongodb!</h1>
+  <h1 class="display-4">Proyecto Final App Nodejs And Mongodb!</h1>
   <p class="lead">A simple App to manage Notes developed with Nodejs, Express,
     Mongodb and Javascript Technologies</p>
   <hr class="my-4" />
@@ -9,7 +9,7 @@
   <div>
     <a
       class="btn btn-primary btn-lg"
-      href="/auth/signup"
+      href="/auth/registrar"
       role="button"
     >Register</a>
   </div>
