--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -1,28 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8">
-    <title>Notes App</title>
+    <title>Proyecto Final App</title>
     <!-- BOOTSTRAP - BOOTSWATCH THEME - COSMOS -->
-    <link rel="stylesheet" href="https://bootswatch.com/5/lux/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootswatch/5.3.0/cosmo/bootstrap.min.css"
+        integrity="sha512-NLsflIDF3KkL2Ne9b7dYTkJ2/EDCe8Uo+/uat0QDDvqFOroaiZnIok2p7OHMt/iUIdQF8HVmcuuyvgzvOfU0mA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- FONT AWESOME -->
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css"
+        integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
     <!-- CUSTOM CSS -->
     <link rel="stylesheet" href="/css/main.css">
-  </head>
-  <body>
+    {{!-- Falvicon icon --}}
+    <link rel="shortcut icon" href="/img/logo.png" type="image/x-icon">
+</head>
+
+<body>
 
     {{> navigation }}
 
     <main class="container p-5">
-      <div class="col-md-4 offset-md-4">
-        {{> messages }}
-        {{> errors }}
-      </div>
-      {{{ body }}}
+        <div class="col-md-4 offset-md-4">
+            {{> messages }}
+            {{> errors }}
+        </div>
+        {{{ body }}}
     </main>
 
     <!-- Scritps -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"></script>
-  </body>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
+        crossorigin="anonymous"></script>
+    <script src="/js/script.js"></script>
+</body>
+
 </html>
