--- a/src/views/partials/navigation.hbs
+++ b/src/views/partials/navigation.hbs
@@ -1,52 +1,32 @@
 <nav class="navbar navbar-expand-lg navbar-dark p-2 bg-black">
-  <div class="container">
-    <a class="navbar-brand" href="/">Notes App</a>
-    <button
-      class="navbar-toggler"
-      type="button"
-      data-bs-toggle="collapse"
-      data-bs-target="#navbarNav"
-      aria-controls="navbarNav"
-      aria-expanded="false"
-      aria-label="Toggle navigation"
-    >
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav">
-        <li class="nav-item">
-          <a class="nav-link" href="/about">About</a>
-        </li>
-      </ul>
-      <ul class="navbar-nav ms-auto">
-        {{#if user}}
-          <li class="nav-item dropdown">
-            <a
-              class="nav-link dropdown-toggle"
-              href="#"
-              id="navbarDropdownMenuLink"
-              role="button"
-              data-bs-toggle="dropdown"
-              aria-expanded="false"
-            >
-              Notes
-            </a>
-            <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-              <a class="dropdown-item" href="/notes">All Notes</a>
-              <a class="dropdown-item" href="/notes/add">Add A Note</a>
-              <div class="dropdown-divider"></div>
-              <a class="dropdown-item" href="/auth/logout">Logout</a>
+    <div class="container justify-content-center">
+        <a class="navbar-brand fs-5 fw-bold" href="/"><img src="/img/logo.png" alt="Event Logo" width="60"
+                loading='lazy' class="img-fluid me-4">Proyecto Final App</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ms-auto text-center text-uppercase">
+                {{#if user}}
+                <li class="nav-item">
+                    <a class="nav-link p-2 fs-5 fw-bold " href="/notes">Proveedores</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link p-2 fs-5 fw-bold" href="#">Presupuesto</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link p-2 fs-5 fw-bold" href="/auth/salir">Salir</a>
+                </li>
+                {{else}}
+                <li class="nav-item">
+                    <a class="nav-link p-2 fs-5 fw-bold" href="/auth/acceder">Acceder</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link p-2 fs-5 fw-bold" href="/auth/registrar">Registrarse</a>
+                </li>
+                {{/if}}
             </ul>
-          </li>
-        {{else}}
-          <li class="nav-item">
-            <a class="nav-link" href="/auth/signin">Login</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/auth/signup">Register</a>
-          </li>
-        {{/if}}
-      </ul>
+        </div>
     </div>
-  </div>
 </nav>
