se agrego mas diseño

--- a/src/views/404.hbs
+++ b/src/views/404.hbs
@@ -1,9 +1,12 @@
-<div class="row">
-  <div class="col-md-4 offset-md-4">
-    <div class="card card-body">
-      <h1>Not Found</h1>
-      <p>This page does not exists</p>
-      <a href="/">Return to home</a>
+<div class="row mt-5">
+    <div class="col-md-8 bg-light mx-auto py-5">
+        <div class="text-center">
+            <h1 class="display-1 fw-bold text-danger">Oops!</h1>
+            <p class="fs-3"> <span class="fw-bold">Error!</span> Pagina no encontrada.</p>
+            <p class="lead">
+                La pagina que estas buscando no existe.
+            </p>
+            <a href="index.html" class="btn btn-primary btn-lg">Ir a la pagina principal</a>
+        </div>
     </div>
-  </div>
 </div>
