--- a/src/views/auth/registrar.hbs
+++ b/src/views/auth/registrar.hbs
@@ -35,7 +35,7 @@
 
                 <div class="mt-3 text-center">
                     <h4>¿Ya tienes una cuenta?</h4>
-                    <a class="fs-4 text-center" href="/auth/acceder">Inicia sesión</a>
+                    <a class="fs-4 text-center text-uppercase" href="/auth/acceder">Inicia sesión</a>
                 </div>
             </div>
         </div>
