--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -1,16 +1,15 @@
-<div class="card card-body p-5 mt-4">
-  <h1 class="display-4">Proyecto Final App Nodejs And Mongodb!</h1>
-  <p class="lead">A simple App to manage Notes developed with Nodejs, Express,
-    Mongodb and Javascript Technologies</p>
-  <hr class="my-4" />
-  <p>veniam voluptatibus aliquid unde sit Libero veniam similique ex reiciendis
-    doloribus! Deleniti sunt cum ad est atque. Esse earum
+<div class="card card-body p-5 mt-5">
+  <h1 class="display-4 fw-bold">Proyecto Final App</h1>
+  <p class="lead ">Una aplicacion que te ayuda a gestionar de mejor manera tus eventos como organizador,
+    llevar una logistica con los proveedores y crear presupuestos para tus clientes.
   </p>
-  <div>
+  <hr class="my-4" />
+  <p>Aprovecha ahora y crea tu cuenta para comenzar a probar todas nuestras funcionalidades.</p>
+  <div class="bg-dark me-auto">
     <a
-      class="btn btn-primary btn-lg"
+      class="btn btn-primary btn-lg "
       href="/auth/registrar"
       role="button"
-    >Register</a>
+    >¡Crea tu cuenta ahora!</a>
   </div>
 </div>
