--- a/src/views/error.hbs
+++ b/src/views/error.hbs
@@ -1,4 +1,4 @@
-<div class="row">
+<div class="row mt-5">
   <div class="col-md-4 offset-md-4">
     <div class="card card-body">
       <h1>Internal Server Error</h1>
