--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Proyecto Final App</title>
+    <title>{{siteName}} | {{page}}</title>
     <!-- BOOTSTRAP - BOOTSWATCH THEME - COSMOS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootswatch/5.3.0/cosmo/bootstrap.min.css"
         integrity="sha512-NLsflIDF3KkL2Ne9b7dYTkJ2/EDCe8Uo+/uat0QDDvqFOroaiZnIok2p7OHMt/iUIdQF8HVmcuuyvgzvOfU0mA=="
@@ -17,7 +17,7 @@
     <link rel="shortcut icon" href="/img/logo.png" type="image/x-icon">
 </head>
 
-<body>
+<body class="d-flex flex-column min-vh-100">
 
     {{> navigation }}
 
@@ -28,6 +28,8 @@
         </div>
         {{{ body }}}
     </main>
+
+    {{> footer }}
 
     <!-- Scritps -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
