--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -1,5 +1,5 @@
 <div class="card card-body p-5 mt-5">
-  <h1 class="display-4 fw-bold">Proyecto Final App</h1>
+  <h1 class="display-4 fw-bold">{{siteName}}</h1>
   <p class="lead ">Una aplicacion que te ayuda a gestionar de mejor manera tus eventos como organizador,
     llevar una logistica con los proveedores y crear presupuestos para tus clientes.
   </p>
