Implementacion de MVC de proveedores

--- a/src/views/404.hbs
+++ b/src/views/404.hbs
@@ -6,7 +6,7 @@
             <p class="lead">
                 La pagina que estas buscando no existe.
             </p>
-            <a href="index.html" class="btn btn-primary btn-lg">Ir a la pagina principal</a>
+            <a href="/" class="btn btn-primary btn-lg">Ir a la pagina principal</a>
         </div>
     </div>
 </div>
