--- a/src/views/partials/navigation.hbs
+++ b/src/views/partials/navigation.hbs
@@ -10,7 +10,7 @@
             <ul class="navbar-nav ms-auto text-center text-uppercase">
                 {{#if user}}
                 <li class="nav-item">
-                    <a class="nav-link p-2 fs-5 fw-bold " href="/notes">Proveedores</a>
+                    <a class="nav-link p-2 fs-5 fw-bold " href="/proveedores">Proveedores</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link p-2 fs-5 fw-bold" href="#">Presupuesto</a>
