--- a/src/views/proveedores/edit-proveedor.hbs
+++ b/src/views/proveedores/edit-proveedor.hbs
@@ -11,18 +11,18 @@
     <div class="col-md-4 mx-auto">
         <div class="card">
             <div class="card-header text-center">
-                <h3>Edit Note</h3>
+                <h3>Edit Proveedor</h3>
             </div>
             <div class="card-body">
-                <form action="/notes/edit-note/{{note._id}}?_method=PUT" method="POST">
+                <form action="/proveedores/edit-proveedor/{{proveedor._id}}?_method=PUT" method="POST">
                     <input type="hidden" name="_method" value="PUT" />
                     <div class="mb-3">
                         <label for="title">Title:</label>
-                        <input type="text" name="title" class="form-control" value="{{note.title}}" />
+                        <input type="text" name="title" class="form-control" value="{{proveedor.title}}" />
                     </div>
                     <div class="mb-3">
                         <label for="description">Description:</label>
-                        <textarea name="description" class="form-control">{{note.description}}</textarea>
+                        <textarea name="description" class="form-control">{{proveedor.description}}</textarea>
                     </div>
                     <button class="btn btn-primary w-100" type="submit">
                         Save
