--- a/src/views/proveedores/new-proveedor.hbs
+++ b/src/views/proveedores/new-proveedor.hbs
@@ -1,10 +1,10 @@
 <div class="col-md-4 mx-auto">
   <div class="card">
     <div class="card-header bg-dark text-center">
-      <h3 class="text-white">New Note</h3>
+      <h3 class="text-white">New Proveedor</h3>
     </div>
     <div class="card-body text-right">
-      <form action="/notes/new-note" method="POST">
+      <form action="/proveedores/new-proveedor" method="POST">
         <div class="mb-3">
           <label for="title">Title:</label>
           <input
