--- a/src/views/proveedores/all-proveedores.hbs
+++ b/src/views/proveedores/all-proveedores.hbs
@@ -1,27 +1,41 @@
 <div class="row">
-  {{#each proveedores}}
-  <div class="col-md-3">
-    <div class="card">
-      <div class="card-body">
-        <h4 class="card-title d-flex justify-content-between align-items-center">
-          {{ title }} <a href="/proveedores/edit/{{_id}}"><i class="fas fa-edit"></i></a>
-        </h4>
-        <p>{{ description }} </p>
-        <!-- DELETE REQUEST -->
-        <form action="/proveedores/delete/{{_id}}?_method=DELETE" method="POST">
-          <input type="hidden" name="_method" value="DELETE">
-          <button type="submit" class="btn btn-danger btn-block btn-sm">Delete</button>
-        </form>
-      </div>
+    {{#each proveedores}}
+    <div class="d-flex flex-row justify-content-center">
+        <a href="/proveedores/add" class="btn btn-primary p-4 text-light fw-bold fs-4 rounded">Agregar proveedor</a>
     </div>
-  </div>
-  {{else}}
-  <div class="card mx-auto">
-    <div class="card-body">
-      <h1>Hello {{user.name}}</h1>
-      <p clsss="lead">There are not Proveedores yet.</p>
-      <a href="/proveedores/add" class="btn btn-success btn-block">Create One!</a>
+    <div class="col-md-4 mt-4">
+        <div class="card">
+            <div class="card-header d-flex flex-row py-3 align-items-center justify-content-between">
+                <h4 class="text-capitalize">{{ title }}</h4>
+                <a class="text-primary" href="/proveedores/edit/{{_id}}"><i class="fas fa-edit fa-2x"></i></a>
+            </div>
+            <div class="card-body">
+                <p>{{ description }} </p>
+                <p>{{ description }} </p>
+                <p>{{ description }} </p>
+                <p>{{ description }} </p>
+                <p>{{ description }} </p>
+                <p>{{ description }} </p>
+                <!-- DELETE REQUEST -->
+                <form action="/proveedores/delete/{{_id}}?_method=DELETE" method="POST">
+                    <input type="hidden" name="_method" value="DELETE">
+                    <div class="d-grid mx-4">
+                        <button type="submit" class="btn btn-danger rounded fw-bold">Eliminar</button>
+                    </div>
+                </form>
+            </div>
+        </div>
     </div>
-  </div>
-  {{/each}}
+    {{else}}
+    <div class="col-8 card my-5 py-5 mx-auto">
+        <div class="card-body text-center">
+            <h1 class="display-3 fw-bold text-capitalize">Bienvenid@ {{username}}</h1>
+            <p class="lead fs-3">Aun no tienes proveedores.</p>
+            <div class="d-flex flex-row justify-content-center">
+                <a href="/proveedores/add" class="btn btn-primary p-4 text-light fw-bold fs-4 rounded">Agrega uno
+                    ahora!</a>
+            </div>
+        </div>
+    </div>
+    {{/each}}
 </div>
