--- a/src/views/proveedores/edit-proveedor.hbs
+++ b/src/views/proveedores/edit-proveedor.hbs
@@ -1,34 +1,24 @@
-<div class="row mt-5">
-    {{#each errors}}
-    <div class="alert alert-danger alert-dismissible fade show" role="alert">
-        {{text}}
-        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-            <span aria-hidden="true">&times;</span>
-        </button>
-    </div>
-    {{/each}}
-
-    <div class="col-md-4 mx-auto">
-        <div class="card">
-            <div class="card-header text-center">
-                <h3>Edit Proveedor</h3>
-            </div>
-            <div class="card-body">
-                <form action="/proveedores/edit-proveedor/{{proveedor._id}}?_method=PUT" method="POST">
-                    <input type="hidden" name="_method" value="PUT" />
-                    <div class="mb-3">
-                        <label for="title">Title:</label>
-                        <input type="text" name="title" class="form-control" value="{{proveedor.title}}" />
-                    </div>
-                    <div class="mb-3">
-                        <label for="description">Description:</label>
-                        <textarea name="description" class="form-control">{{proveedor.description}}</textarea>
-                    </div>
-                    <button class="btn btn-primary w-100" type="submit">
-                        Save
-                    </button>
-                </form>
-            </div>
+<div class="col-md-4 mx-auto mt-5">
+    <div class="card">
+        <div class="card-header bg-dark text-center">
+            <h3 class="text-white">Editar Proveedor</h3>
+        </div>
+        <div class="card-body">
+            <form action="/proveedores/edit-proveedor/{{proveedor._id}}?_method=PUT" method="POST">
+                <input type="hidden" name="_method" value="PUT" />
+                <div class="mb-3">
+                    <label for="title">Title:</label>
+                    <input type="text" name="title" class="form-control" placeholder="Title" value="{{proveedor.title}}" />
+                </div>
+                <div class="mb-3">
+                    <label for="description">Description:</label>
+                    <textarea name="description" class="form-control"
+                        placeholder="Description">{{proveedor.description}}</textarea>
+                </div>
+                <button class="btn btn-primary w-100 fw-bold" type="submit">
+                    Guardar
+                </button>
+            </form>
         </div>
     </div>
 </div>
