--- a/src/views/proveedores/new-proveedor.hbs
+++ b/src/views/proveedores/new-proveedor.hbs
@@ -1,32 +1,23 @@
-<div class="col-md-4 mx-auto">
-  <div class="card">
-    <div class="card-header bg-dark text-center">
-      <h3 class="text-white">New Proveedor</h3>
-    </div>
-    <div class="card-body text-right">
-      <form action="/proveedores/new-proveedor" method="POST">
-        <div class="mb-3">
-          <label for="title">Title:</label>
-          <input
-            type="text"
-            name="title"
-            class="form-control"
-            placeholder="Title"
-            autofocus
-          />
+<div class="col-md-4 mx-auto mt-5">
+    <div class="card">
+        <div class="card-header bg-dark text-center">
+            <h3 class="text-white">Nuevo Proveedor</h3>
         </div>
-        <div class="mb-3">
-          <label for="description">Description:</label>
-          <textarea
-            name="description"
-            class="form-control"
-            placeholder="Description"
-          ></textarea>
+        <div class="card-body">
+            <form action="/proveedores/new-proveedor" method="POST">
+                <div class="mb-3">
+                    <label for="title">Title:</label>
+                    <input type="text" name="title" class="form-control" placeholder="Title" autofocus
+                        value="{{title}}" />
+                </div>
+                <div class="mb-3">
+                    <label for="description">Description:</label>
+                    <textarea name="description" class="form-control" placeholder="Description">{{description}}</textarea>
+                </div>
+                <button class="btn btn-primary w-100 fw-bold" type="submit">
+                    Guardar
+                </button>
+            </form>
         </div>
-        <button class="btn btn-primary w-100" type="submit">
-          Save
-        </button>
-      </form>
     </div>
-  </div>
 </div>
