Seccion proveedores completa

--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -1,15 +1,13 @@
-<div class="card card-body p-5 mt-5">
-  <h1 class="display-4 fw-bold">{{siteName}}</h1>
-  <p class="lead ">Una aplicacion que te ayuda a gestionar de mejor manera tus eventos como organizador,
-    llevar una logistica con los proveedores y crear presupuestos para tus clientes.
-  </p>
-  <hr class="my-4" />
-  <p>Aprovecha ahora y crea tu cuenta para comenzar a probar todas nuestras funcionalidades.</p>
-  <div class="bg-dark me-auto">
-    <a
-      class="btn btn-primary btn-lg "
-      href="/auth/registrar"
-      role="button"
-    >¡Crea tu cuenta ahora!</a>
-  </div>
+<div class="row">
+    <div class="card card-body p-5 mt-5">
+        <h1 class="display-5 fw-bold">{{siteName}}</h1>
+        <p class="lead ">Una aplicacion que te ayuda a gestionar de mejor manera tus eventos como organizador,
+            llevar una logistica con los proveedores y crear presupuestos para tus clientes.
+        </p>
+        <hr class="my-4" />
+        <p>Aprovecha ahora y crea tu cuenta para comenzar a probar todas nuestras funcionalidades.</p>
+        <div class="bg-dark me-auto">
+            <a class="btn btn-primary btn-lg " href="/auth/registrar" role="button">¡Crea tu cuenta ahora!</a>
+        </div>
+    </div>
 </div>
