--- a/src/views/proveedores/new-proveedor.hbs
+++ b/src/views/proveedores/new-proveedor.hbs
@@ -6,13 +6,28 @@
         <div class="card-body">
             <form action="/proveedores/new-proveedor" method="POST">
                 <div class="mb-3">
-                    <label for="title">Title:</label>
-                    <input type="text" name="title" class="form-control" placeholder="Title" autofocus
-                        value="{{title}}" />
+                    <label class="form-label" for="name">Nombre:</label>
+                    <input type="text" name="name" class="form-control" autofocus value="{{name}}" />
                 </div>
                 <div class="mb-3">
-                    <label for="description">Description:</label>
-                    <textarea name="description" class="form-control" placeholder="Description">{{description}}</textarea>
+                    <label for="category">Categoria:</label>
+                    <input type="text" name="category" class="form-control" value="{{category}}" />
+                </div>
+                <div class="mb-3">
+                    <label for="phone">Telefono:</label>
+                    <input type="text" name="phone" class="form-control" value="{{phone}}" />
+                </div>
+                <div class="mb-3">
+                    <label for="address">Direccion:</label>
+                    <input type="text" name="address" class="form-control" value="{{address}}" />
+                </div>
+                <div class="mb-3">
+                    <label for="email">Correo:</label>
+                    <input type="email" name="email" class="form-control" value="{{email}}" />
+                </div>
+                <div class="mb-3">
+                    <label for="description">Descripcion:</label>
+                    <textarea name="description" class="form-control">{{description}}</textarea>
                 </div>
                 <button class="btn btn-primary w-100 fw-bold" type="submit">
                     Guardar
