--- a/src/views/proveedores/edit-proveedor.hbs
+++ b/src/views/proveedores/edit-proveedor.hbs
@@ -17,7 +17,7 @@
                 </div>
                 <div class="mb-3">
                     <label for="phone">Telefono:</label>
-                    <input type="text" name="phone" class="form-control" value="{{proveedor.phone}}" />
+                    <input type="tel" name="phone" class="form-control" value="{{proveedor.phone}}" />
                 </div>
                 <div class="mb-3">
                     <label for="address">Direccion:</label>
@@ -32,7 +32,7 @@
                     <textarea name="description" class="form-control">{{proveedor.description}}</textarea>
                 </div>
                 <button class="btn btn-primary w-100 fw-bold" type="submit">
-                    Confirmar
+                    Guardar
                 </button>
             </form>
         </div>
