--- a/src/views/proveedores/new-proveedor.hbs
+++ b/src/views/proveedores/new-proveedor.hbs
@@ -15,7 +15,7 @@
                 </div>
                 <div class="mb-3">
                     <label for="phone">Telefono:</label>
-                    <input type="text" name="phone" class="form-control" value="{{phone}}" />
+                    <input type="tel" name="phone" class="form-control" value="{{phone}}" />
                 </div>
                 <div class="mb-3">
                     <label for="address">Direccion:</label>
