--- a/src/views/presupuesto/edit-presupuesto.hbs
+++ b/src/views/presupuesto/edit-presupuesto.hbs
@@ -21,7 +21,7 @@
                             <select class="form-select" name="typeActivity">
                                 <option value="{{presupuesto.typeActivity}}">
                                     {{presupuesto.typeActivity}}</option>
-                                <option value="No definido">Seleciona un tipo</option>
+                                <option value="Indefinido">Seleciona un tipo</option>
                                 <option value="Cumpleaños">Cumpleaños</option>
                                 <option value="Graduacion">Graduacion</option>
                                 <option value="Boda">Boda</option>
@@ -76,7 +76,7 @@
                             <select class="form-select" name="status">
                                 <option value="{{presupuesto.status}}">{{presupuesto.status}}
                                 </option>
-                                <option value="No definido" selected>Seleciona un estado</option>
+                                <option value="Indefinido" selected>Seleciona un estado</option>
                                 <option value="Aceptado">Aceptado</option>
                                 <option value="Pendiente">Pendiente</option>
                                 <option value="Rechazado">Rechazado</option>
